<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textViewNewReleve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/StringNewReleve"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="10dp">

        <Button
            android:id="@+id/btnDateNewR"
            style="@style/styleBouton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_weight="1"
            android:text="@string/btnDate" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/editTextDate"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textViewHeure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextViewHeure"
            android:layout_marginTop="25dp"/>

        <Spinner
            android:id="@+id/spinnerNewChoixHeure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editTextNumberTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_marginTop="25dp"
            android:hint="@string/editTextNbTemp"
            android:autofillHints=""/>

        <TextView
            android:id="@+id/textViewChoixLac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/StringChoixLac"
            android:layout_marginTop="25dp"/>

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CoordGps"
            android:layout_marginTop="25dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="75dp">

            <Button
                style="@style/styleBouton"
                android:id="@+id/btnAnnulerNewR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnAnnuler" />

            <Button
                style="@style/styleBouton"
                android:id="@+id/btnValiderNewR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnValider" />

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>