<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textViewListeReleve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Liste des relevés"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:id="@+id/textViewChoixLac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Choix du lac"/>
        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textViewListeChoixMois"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Choix du mois" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout0"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <TextView
            android:background="@color/backgroundTint"
            android:textAlignment="center"
            android:textColor="@color/textBouton"
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Moyenne température C°/F°" />

        <TextView
            android:background="@color/backgroundTint"
            android:textColor="@color/textBouton"
            android:textAlignment="center"
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Heure" />
    </LinearLayout>

    <ListView

        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"></ListView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:layout_marginTop="175dp">

        <Button
            style="@style/styleBouton"
            android:id="@+id/btnCelsiusListeReleve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnCelsius" />

        <Button
            style="@style/styleBouton"
            android:id="@+id/btnFahrenheitListeReleve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnFahrenheit" />
    </LinearLayout>

    <Button
        style="@style/styleBouton"
        android:id="@+id/btnRetourListeReleve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btnRetour"
        app:layout_constraintTop_toBottomOf="@id/linearLayout3"/>



</androidx.constraintlayout.widget.ConstraintLayout>