<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textViewAfficheReleve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Affichage relevé"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="10dp">

        <Button
            style="@style/styleBouton"
            android:id="@+id/btnDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Choisir une date"
            android:layout_marginHorizontal="25dp"
            />

        <EditText

            android:id="@+id/editTextDate2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Date"
            android:inputType="date" />

        <TextView
            android:id="@+id/textViewChoixLacAffiche"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Choix du lac" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout0"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:background="@color/backgroundTint"
            android:textAlignment="center"
            android:textColor="@color/textBouton"
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Température" />

        <TextView
            android:background="@color/backgroundTint"
            android:textColor="@color/textBouton"
            android:textAlignment="center"
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Heure" />
    </LinearLayout>

    <ListView

        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"></ListView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:layout_marginTop="150dp">

        <Button
            style="@style/styleBouton"
            android:id="@+id/btnCelsiusAfficheReleve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnCelsius" />

        <Button
            style="@style/styleBouton"
            android:id="@+id/btnFahrenheitAfficheReleve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnFahrenheit" />
    </LinearLayout>

    <Button
        style="@style/styleBouton"
        android:id="@+id/btnRetourAfficheReleve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btnRetour"
        app:layout_constraintTop_toBottomOf="@id/linearLayout3"/>



</androidx.constraintlayout.widget.ConstraintLayout>